--- a/ct/hd1.html
+++ b/ct/hd1.html
@@ -10,10 +10,10 @@
 <body>
 
 <div id="ct" ct-layout>
-    <div id="actions-panel" class="actions-pane"></div>
-    <div id="schedule-order-panel" class="schedule-order-pane" schedule-order-layout>
-        <div id="schedule-panel" ng-controller="ScheduleCtrl" class="ui-layout-center" schedule-layout>
-            <div id="kpi-panel" class="ui-layout-north">
+    <div id="actions-panel"></div>
+    <div id="plan-panel" plan-layout>
+        <div id="resource-panel" ng-controller="ScheduleCtrl" scroll-synchronize resource-layout>
+            <div id="kpi-panel" >
                 <div id="zoom">
                     <img src='img/zoom_icon.gif' class='zoom-icon'>
                     <div ng-class="{'zoom-step': true, active: zoom == 2}" ng-click='zoomChange(2)'>2h</div>
@@ -23,20 +23,23 @@
                     <div ng-class="{'zoom-step': true, active: zoom == 48, inactive: maxZoom < 48}"
                          ng-click='zoomChange(48)'>2d
                     </div>
-
                 </div>
             </div>
-            <div id="vehicle-panel" class="ui-layout-west">
-                <div id="vehicle-toolbar"></div>
-                <!--<div ng-repeat='vehicle in vehicles' class="vehicle" vehicle></div>-->
+            <div id="vehicle-panel" vehicle-layout>
+                <div id="vehicle-toolbar-panel"></div>
+                <div id="vehicle-card-panel">
+                    <div ng-repeat='vehicle in vehicles' class="vehicle" vehicle></div>
+                </div>
             </div>
-            <div id="time-line-panel" class="ui-layout-center">
-                <div id="timescale" timescale></div>
-                <!--<div ng-repeat='schedule in schedules' class="schedule"></div>-->
+            <div id="schedule-panel" schedule-layout>
+                <div id="timescale-panel" timescale></div>
+                <div id="time-line-panel">
+                    <div ng-repeat='schedule in schedules' class="time-line"></div>
+                </div>
             </div>
-            <div id="map-panel" class="ui-layout-south"></div>
+            <div id="map-panel"></div>
         </div>
-        <div id="orders-panel" class="ui-layout-east">
+        <div id="orders-panel">
         </div>
     </div>
 </div>
