--- a/ct/hd1.html
+++ b/ct/hd1.html
@@ -36,25 +36,12 @@
                 <div id="timescale-panel" timescale min-time="{{minScheduleTime}}" max-time="{{maxScheduleTime}}"
                      zoom="{{zoom}}" set-mills-in-px="setMillsInPx(millsPerPx)"></div>
                 <div id="time-line-panel">
-                    <div ng-repeat='vehicle in vehicles' class="time-line" time-resizer start-at="{{minScheduleTime}}" end-at="{{maxScheduleTime}}" mills-in-px="{{millsInPx}}">
-                        <div class="off-duty" time-resizer start-at="{{minScheduleTime}}" end-at="{{vehicle.workStartTime}}" mills-in-px="{{millsInPx}}"></div>
-
-                        <div ng-if="vehicle.schedule.runs.length == 0">
-                            <div class="off-duty available" time-resizer start-at="{{vehicle.workStartTime}}" end-at="{{vehicle.workEndTime}}" mills-in-px="{{millsInPx}}"></div>
+                    <div ng-repeat='vehicle in vehicles' schedule="vehicle.schedule" class="time-line" timeline ng-style="{width: (maxScheduleTime - minScheduleTime) / millsInPx}" mills-in-px="{{millsInPx}}">
+                        <div ng-repeat='run in vehicle.schedule.runs' class="run" ng-style="{width: (run.returnEndTime - run.loadingStartTime) / millsInPx}">
+                            <div class="header" ng-style="{width: (run.loadingEndTime - run.loadingStartTime) / millsInPx}"></div>
+                            <div ng-repeat='order in run.orders' class="order" ng-style="{width: (order.endTime - order.startTime) / millsInPx}"></div>
+                            <div class="footer" ng-style="{width: (run.returnEndTime - run.returnStartTime) / millsInPx}"></div>
                         </div>
-
-                        <!--<div ng-repeat='run in vehicle.schedule.runs'>-->
-                            <!--<div ng-if="run.loadingStartTime > vehicle.workStartTime">-->
-                                <!--<div class="off-duty available" time-resizer start-at="{{vehicle.workStartTime}}" end-at="{{vehicle.workEndTime}}" mills-in-px="{{millsInPx}}"></div>-->
-                            <!--</div>-->
-                            <!--<div class="run">-->
-                                <!--<div class="header" start-at="{{run.loadingStartTime}}" end-at="{{run.loadingEndTime}}"></div>-->
-                                <!--<div class="container" start-at="{{run.loadingEndTime}}" end-at="{{run.returnStartTime}}"></div>-->
-                                <!--<div class="footer" start-at="{{run.returnStartTime}}" end-at="{{run.returnEndTime}}"></div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-
-                        <div class="off-duty" time-resizer start-at="{{vehicle.workEndTime}}" end-at="{{maxScheduleTime}}" mills-in-px="{{millsInPx}}"></div>
                     </div>
                 </div>
             </div>
